--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-hello
+https://docs.rtems.org/branches/master/user/installation/developer.html#posix-and-os-x-host-tools-chain
+
+mkdir -p development/rtems
+cd development/rtems
+git clone git://git.rtems.org/rtems-source-builder.git rsb
+cd rsb
+./source-builder/sb-check
+cd rtems
+../source-builder/sb-set-builder --prefix=/usr/home/chris/development/rtems/5 5/rtems-arm
+
