make file selection visible

--- a/cv.html
+++ b/cv.html
@@ -7,8 +7,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/4.1.0/mustache.min.js"></script>
 </head>
 <body>
-    <input type="file" id="jsonInput" accept=".json" style="display: none;">
-    <input type="file" id="templateInput" accept=".html" style="display: none;">
+    <input type="file" id="jsonInput" accept=".json">
+    <input type="file" id="templateInput" accept=".html">
     <button onclick="uploadFiles()">Upload JSON and Template</button>
     <button onclick="processTemplate()" disabled>Process Template</button>
     <button onclick="downloadResult()" disabled>Download Result</button>
