--- a/cv.html
+++ b/cv.html
@@ -40,6 +40,7 @@
     function checkFilesUploaded() {
         if (jsonData && templateContent) {
             document.getElementById("ptbutton").disabled = false;
+            document.getElementById("dlbutton").disabled = false;
         }
     }
 
